--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     , "jade": ">= 0.0.1"
     , "static_site_generator": "git+ssh://git@github.com:mywebclass/static_site_generator.git"
     , "share": "*"
+    , "showdown": "0.3.1"
   }
 }
