update package.json, api

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   , "dependencies": {
       "express": "3.0.0"
     , "jade": ">= 0.0.1"
-    , "static_site_generator": "git+ssh://git@github.com:mywebclass/static_site_generator.git"
+    , "static_site_generator": "git+ssh://git@github.com:mywebclass/static_site_generator.git#master"
     , "share": "*"
     , "showdown": "0.3.1"
   }
