--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-    "name": "mywebclass-content-editor"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "3.0.0"
-    , "jade": ">= 0.0.1"
-    , "static_site_generator": "git+ssh://git@github.com:mywebclass/static_site_generator.git#master"
-    , "share": "*"
-    , "showdown": "0.3.1"
+  "name": "mywebclass-content-editor",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "express": "3.0.0",
+    "jade": ">= 0.0.1",
+    "static_site_generator": "git+ssh://git@github.com:mywebclass/static_site_generator.git#master",
+    "share": "*",
+    "showdown": "0.3.1"
+  },
+  "devDependencies": {
+    "grunt": "*",
+    "grunt-contrib-jshint": "*"
   }
 }
