chore(sonar): sonar exclusion

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,4 +24,4 @@ sonar.language=js
 # Additional parameters
 #sonar.my.property=value
 
-sonar.exclusions=**/node_modules/**,docs/**/*
+sonar.exclusions=**/node_modules/**,docs/**/*,public/js/lib/**/*,public/bootstrap/**/*,public/lib/**/*
