--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "jade": ">= 0.0.1",
     "static_site_generator": "git+ssh://git@github.com:mywebclass/static_site_generator.git#master",
     "share": "*",
-    "showdown": "0.3.1"
+    "showdown": "0.3.1",
+    "yaml-config": "*",
+    "mongoose": "*"
   },
   "devDependencies": {
     "grunt": "*",
